lab05 singular models complete

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "jest": "^24.9.0",
     "mongodb-memory-server": "^5.2.8",
+    "mongoose": "^5.7.5",
     "supertest": "^4.0.2",
     "uuid": "^3.3.3"
   }
